--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <img id="logo" alt="samah logo" src="samah.jpg" height="50px">
     </div>
     <img style="width: 100%" id="laptop" src="portfolio.jpg" alt="alt text" height="200">
-    <h1>About Samah</h1>
+    <h1>Welcome To Samah</h1>
     <div id="about">
         <div id="desc">
             <p style="margin-top: 0; text-align: justify;">
